# stm32mp1-rpmsg-netlink-example

./: README.md
CA7-Source/kernel-driver/: Makefile  rpmsg_netlink.c
CA7-Source/userspace/: CMakeLists.txt  README.md  common.h  log.h  main.cpp  netlink_client.cpp  netlink_client.h  netlink_tester.cpp  netlink_tester.h
CM4-Source/: build.sh  fw_cortex_m4.sh  fw_cortex_m4_netlink.sh
CM4-Source/source/: CMakeLists.txt
CM4-Source/source/cmake/: bsp-disco.cmake  freertos.cmake  hal_drivers.cmake  ll_drivers.cmake  noarch_c_lib.cmake  openamp.cmake  stm32_usb_fs_driver.cmake  stm32f4_dimtass_lib.cmake
CM4-Source/source/config/: gdb.ini
CM4-Source/source/src_hal/: CMakeLists.txt  main.c  stm32mp15xx_disco.c  syscalls.c
CM4-Source/source/src_hal/inc/: stm32mp15xx_disco.h  stm32mp15xx_disco_conf.h  stm32mp1xx_hal_conf.h
